Multiple CSS Classes with Combined Selectors

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </nav>
     <section
       id="intro"
-      class="main-section"
+      class="main-section highlighted"
     >
       <p>This is the intro section.</p>
     </section>
